@@ -1,0 +1,249 @@
+#
+# This file was generated by Resource Bundle Editor
+#
+About.title=N\u00E9vjegy\: Gallery Remote
+AddFileDialog.Add=Hozz\u00E1ad
+AddFileDialog.Title=K\u00E9pek \u00E9s/vagy k\u00F6nyvt\u00E1rak hozz\u00E1ad\u00E1sa
+AlbmInspec.Apply=<html><center>A funkci\u00F3 m\u00E9g nincs t\u00E1mogatva.</center></html>
+AlbmInspec.Beginning=Album elej\u00E9re tedd
+AlbmInspec.Fetch=K\u00E9pek let\u00F6lt\u00E9se a szerverr\u00F6l
+AlbmInspec.Move=Album mozgat\u00E1sa...
+AlbmInspec.Name=N\u00E9v
+AlbmInspec.New=Uj album
+AlbmInspec.Override=F\u00F6lt\u00F6lt\u00E9s alapbe\u00E1ll\u00EDt\u00E1s\u00E1nak f\u00F6l\u00FCl\u00EDr\u00E1sa
+AlbmInspec.Pictures=K\u00E9pek
+AlbmInspec.Props=Album be\u00E1ll\u00EDt\u00E1sok
+AlbmInspec.Resize=M\u00E9retez\u00E9s
+AlbmInspec.Slideshow=Diavet\u00EDt\u00E9s
+AlbmInspec.Summary=Kivonat
+AlbmInspec.Title=C\u00EDm
+AlbmInspec.res2Def=Album alapbe\u00E1ll\u00EDt\u00E1sok
+AlbmInspec.res2DefTip=\u00DAjra m\u00E9retez\u00E9s az Album alapbe\u00E1ll\u00EDt\u00E1sainak megfelel\u00F6en
+AlbmInspec.res2Frc=Mindenk\u00E9pp \u00FAjram\u00E9retez erre
+AlbmInspec.res2FrcTip=Mindenk\u00E9pp m\u00E9retezze \u00FAjra, figyelmen k\u00EDv\u00FCl hagyva az Album alapbe\u00E1ll\u00EDt\u00E1sait.
+AlbmInspec.res2H=\u00DAjra m\u00E9retez\u00E9s, magass\u00E1g r\u00F6gz\u00EDtve
+AlbmInspec.res2W=\u00DAjra m\u00E9retez\u00E9s, sz\u00E9less\u00E9g r\u00F6gz\u00EDtve
+AlbmInspec.resBfrUpld=F\u00F6lt\u00F6lt\u00E9s el\u00F6tti \u00FAjra m\u00E9retez\u00E9s
+AlbmInspec.resBfrUpldTip=Gallery Remote \u00FAjra m\u00E9retezi a k\u00E9peket miel\u00F6tt a szerverre k\u00FCldeni az\u00E9rt, hogy cs\u00F6kkentse a s\u00E1vsz\u00E9less\u00E9g felhaszn\u00E1l\u00E1st. Csak akkor m\u00FCk\u00F6dik ha van ImageMagick telep\u00EDtve.
+Album.ro=csak olvashat\u00F3
+Album.title=Nincs kapcsolat a Gal\u00E9ri\u00E1val
+AppletMini.Add=K\u00E9pek hozz\u00E1ad\u00E1sa...
+AppletMini.DefMessage=K\u00E9pek hozz\u00E1ad\u00E1sa a list\u00E1hoz...
+AppletMini.Upload=F\u00F6lt\u00F6lt\u00E9s
+AppletMini.pictures=Felt\u00F6ltend\u00F6 k\u00E9pek list\u00E1ja ("fogd \u00E9s vidd" vagy kattints az K\u00E9pek Hozz\u00E1ad\u00E1sa... gombra)
+Common.Cancel=M\u00E9gsem
+GEdiDlog.alias=R\u00F6vid n\u00E9v
+GEdiDlog.passwd=Jelsz\u00F3
+GEdiDlog.stndAln=Gal\u00E9ria C\u00EDme
+GEdiDlog.stndAlnHlp=<html>A Gal\u00E9ria c\u00EDme az a c\u00EDm (URL) amit a felhaszn\u00E1l\u00F3k haszn\u00E1lnak a bejelentkez\u00E9shez.</html>
+GEdiDlog.title=Gal\u00E9ria R\u00E9szletei
+GEdiDlog.type=Gal\u00E9ria Tipusa
+GEdiDlog.username=Felhaszn\u00E1l\u00F3 n\u00E9v
+GalComm.error=Hiba
+GalComm1.ftchngAlbm=Albumok let\u00F6lt\u00E9se a {0} -rol folyamatban van
+GalComm1.logging=Bejelentkez\u00E9s {0} -hoz
+GalComm1.upldComplete=Felt\u00F6lt\u00E9s befejez\u00F6d\u00F6tt
+GalComm1.upldErr=Hiba felt\u00F6lt\u00E9s kozben\: {0}
+GalComm1.upldFailed=Felt\u00F6lt\u00E9s nem siker\u00FClt
+GalComm1.upldSucc=Felt\u00F6lt\u00E9s siker\u00FClt
+GalComm1.uploadingPic=K\u00E9pek felt\u00F6lt\u00E9se folyamatban
+GalComm1.uploadingStat=Felt\u00F6lt\u00E9s folyamatban {0} ({1, number, integer}/{2, number, integer})
+GalComm2.addImgErr=Sikertelen k\u00E9p hozz\u00E1ad\u00E1s
+GalComm2.addImgOk=K\u00E9p sikeresen hozz\u00E1adva
+GalComm2.albmFtchng=Albumok let\u00F6lt\u00E9se a {0} -rol folyamatban van
+GalComm2.crateAlbmOk=Album l\u00E9trehoz\u00E1sa siker\u00FClt
+GalComm2.fetchAlbImages={0} Album k\u00E9peinek list\u00E1z\u00E1sa
+GalComm2.fetchComplete=Let\u00F6lt\u00E9s befejez\u00F6d\u00F6tt
+GalComm2.trnsfrStat=K\u00FCld\u00E9s {0} / {1}kB ({2}kB/s)
+GalComm2.upFailed=Sikertelen felt\u00F6lt\u00E9s
+GalComm2.upPic=K\u00E9pek felt\u00F6lt\u00E9se
+GalComm2.upPrep=Felt\u00F6lt\u00E9s el\u00F6k\u00E9sz\u00EDt\u00E9se...
+GalComm2.upStart=Felt\u00F6lt\u00E9s indul...
+GalComm2.upStatus=Felt\u00F6lt\u00F6dik {0} ({1, number, integer}/{2, number, integer})
+GalComm2.upStop=Felt\u00F6lt\u00E9s le\u00E1ll\u00EDt\u00E1sa
+GalComm2.upSucc=Felt\u00F6lt\u00E9s siker\u00FClt
+GeneralPa.icon=\u00C1ltal\u00E1nos be\u00E1ll\u00EDt\u00E1sok
+GeneralPa.lang=Nyelv
+GeneralPa.langTitle=Nyelv
+GeneralPa.langTranslatedBy=Ford\u00EDtotta\: {0}
+GeneralPa.langWarn=A nyelv megv\u00E1ltoz\u00E1s\u00E1hoz a Gallery Remote-ot \u00FAjra kell ind\u00EDtani
+GeneralPa.showThumb=Ikon n\u00E9zet
+GeneralPa.thumb=Ikonok
+GeneralPa.thumbH=Ikon magass\u00E1g
+GeneralPa.thumbS=Ikon m\u00E9ret
+GeneralPa.thumbW=Ikon sz\u00E9less\u00E9g
+GeneralPa.updateBetaCheck=Beta update-ek ellen\u00F6rz\u00E9se
+GeneralPa.updateCheck=Friss\u00EDt\u00E9s ellen\u00F6rz\u00E9se
+GeneralPa.versionCheck=\u00DAj verzi\u00F3 ellen\u00F6rz\u00E9se
+ImageUtils.down.end={0} let\u00F6lt\u00E9se k\u00E9sz
+MainFrame.Gallery_URL=Gal\u00E9ria C\u00EDm
+MainFrame.Log_in=Bejelentkez\u00E9s
+MainFrame.Log_out=Kijelentkez\u00E9s
+MainFrame.OK_toSaveBeforeClose=Bez\u00E1r\u00E1s el\u00F6tt el akarod menteni ezt a f\u00E1lt?
+MainFrame.Select_Album=V\u00E1lassz ki egy albumot
+MainFrame.albumCombo=V\u00E1lassz ki egy albumot \u00E9s addj hozz\u00E1 k\u00E9peket. Az album neve ut\u00E1n a z\u00E1r\u00F3jelben l\u00E9v\u00F6 sz\u00E1mok a hozz\u00E1adott k\u00E9pek sz\u00E1m\u00E1t jelenti.
+MainFrame.albums=Albumok
+MainFrame.brwsBtnTip=<html>Keresd ki a k\u00E9peket amelyeket hozz\u00E1 akarsz adni a kijel\u00F6lt albumhoz.<br>Ez a gomb nem haszn\u00E1lhat\u00F3 ha a kijel\u00F6lt album csak olvashat\u00F3 vagy ha nem vagy bejelenkezve.</html>
+MainFrame.brwsBtnTxt=K\u00E9pek hozz\u00E1ad\u00E1sa
+MainFrame.cbmenuPath=\u00DAtvonal n\u00E9zet
+MainFrame.cbmenuPreview=El\u00F6n\u00E9zet
+MainFrame.cbmenuThumb=Ikon n\u00E9zet
+MainFrame.gllryCombo=Valassz egy Gal\u00E9riat amire be akarsz jelenkezni.
+MainFrame.inspDvdr=Gal\u00E9ri\u00E1k k\u00E9pei \u00E9s albumai
+MainFrame.loginButtonTip=<html>Kapcsol\u00F3d\u00E1s vagy kapcsolat bont\u00E1s a kiv\u00E1lasztott gal\u00E9ri\u00E1hoz.<br>Egyszerre t\u00F6bb gal\u00E9ri\u00E1hoz is lehet kapcsol\u00F3dni.</html>
+MainFrame.logoutQuestion=Ha kijelentkezel elveszik miden f\u00F6l nem t\u00F6lt\u00F6tt v\u00E1ltoztat\u00E1s a {0} Gal\u00E9ri\u00E1ban.\n\nEl legyen mentve kijelentkez\u00E9s el\u00F6tt?
+MainFrame.manySel=k\u00E9pek
+MainFrame.menuAbout=N\u00E9vjegy\: Gallery Remote
+MainFrame.menuClearCache=Gyorst\u00E1rol\u00F3 \u00FCr\u00EDt\u00E9se
+MainFrame.menuClose=Bez\u00E1r
+MainFrame.menuCopy=M\u00E1sol\u00E1s
+MainFrame.menuCut=Kiv\u00E1g\u00E1s
+MainFrame.menuEdit=Szerkeszt\u00E9s
+MainFrame.menuFile=F\u00E1jl
+MainFrame.menuHelp=S\u00FAg\u00F3
+MainFrame.menuNew=\u00DAj
+MainFrame.menuOpen=Megnyit\u00E1s...
+MainFrame.menuOptions=Opci\u00F3k
+MainFrame.menuPaste=Beilleszt\u00E9s
+MainFrame.menuPref=Be\u00E1ll\u00EDt\u00E1sok...
+MainFrame.menuQuit=Kil\u00E9p\u00E9s
+MainFrame.menuSave=Ment\u00E9s...
+MainFrame.menuSaveAs=Ment\u00E9s mint...
+MainFrame.newAlbmBtnTip=\u00DAj Album l\u00E9trehoz\u00E1sa a kijel\u00F6lt Gal\u00E9ri\u00E1ban
+MainFrame.newAlbmBtnTxt=\u00DAj Album
+MainFrame.newGalleryBtn=Gal\u00E9ria C\u00EDm Hozz\u00E1ad\u00E1s...
+MainFrame.noSelection=Semmi sincs kiv\u00E1lasztva
+MainFrame.noTitleHeader=<nincs elmentve>
+MainFrame.notLogged=Jel\u00F6lj ki egy Gal\u00E9ria c\u00EDmet es nyomd meg a Bejelentkez\u00E9s gombot
+MainFrame.oneSel=k\u00E9p
+MainFrame.panel1=C\u00E9l Gal\u00E9ria
+MainFrame.pictures=Kiv\u00E1lasztott album k\u00E9pei (hozz\u00E1ad\u00E1s "fogd \u00E9s vidd'-el)
+MainFrame.quitQuestion=Ha kil\u00E9psz minden eddigi v\u00E1ltoztat\u00E1s elv\u00E9sz. Mentsd el ha nem ezt akarod. Kilepes ?
+MainFrame.quitQuestion.title=Figyelem
+MainFrame.selPicToAdd=V\u00E1lassz ki k\u00E9peket \u00E9s/vagy k\u00F6nyvt\u00E1rakat a list\u00E1hoz val\u00F3 hozz\u00E1ad\u00E1sra
+MainFrame.sort.1=f\u00E1jl neve szerint
+MainFrame.sort.2=EXIF l\u00E9trehoz\u00E1si id\u00F6 szerint
+MainFrame.sortAlternativesBtnTip=V\u00E1laszd ki hogy mi szerint legyen elrendezve
+MainFrame.sortBtnTip=Album k\u00E9peinek \u00FAjra rendez\u00E9se.
+MainFrame.sortBtnTxt=Elrendez\u00E9s
+MainFrame.statusBarNoSel={0, number, integer} k\u00E9p / {1, number, integer} K
+MainFrame.statusBarSel=Kijel\u00F6lve {0, number, integer} {1} / {2, number, integer} K
+MainFrame.upldBtnTip=<html>Az albumokhoz hozz\u00E1adott k\u00E9pek f\u00F6lt\u00F6lt\u00E9se,<br>azok a k\u00E9pek is fel lesznek t\u00F6ltve amik most nem l\u00E1tszanak.<html>
+MainFrame.upldBtnTxt=K\u00E9pek f\u00F6lt\u00F6lt\u00E9se
+MoveAlbum.moveAlbm=Album {0} mozgat\u00E1sa egy m\u00E1sik albumba
+MoveAlbum.parentAlbm=Mozgat\u00E1s ide
+MoveAlbum.title=Album mozgat\u00E1sa
+NewAlbum.albmDesc=Album le\u00EDr\u00E1sa
+NewAlbum.albmName=Album neve
+NewAlbum.albmTitle=Album cime
+NewAlbum.createAlbm=\u00DAj album l\u00E9trehoz\u00E1sa a {0} Gal\u00E9ri\u00E1ban
+NewAlbum.parentAlbm=Sz\u00FCl\u00F6 album
+NewAlbum.title=\u00DAj Album
+PictInspec.Album=Album
+PictInspec.Caption=K\u00E9pal\u00E1\u00EDr\u00E1s
+PictInspec.Delete=T\u00F6rl\u00E9s
+PictInspec.Move=Mozgat\u00E1s
+PictInspec.Path=\u00DAtvonal
+PictInspec.Size=M\u00E9ret
+PictInspec.countElemSel={0, number, integer} kijel\u00F6lt tag
+PictInspec.delBtnTip=Kijel\u00F6lt k\u00E9p(ek) t\u00F6rl\u00E9se az albumb\u00F3l (f\u00E1jlt nem t\u00F6rli le a lemezr\u00F6l)
+PictInspec.dnBtn=Le
+PictInspec.dnBtnTip=Kijel\u00F6lt k\u00E9p lefele mozgat\u00E1sa
+PictInspec.flipTip=Kijel\u00F6lt k\u00E9p(ek) \u00E1tforgat\u00E1sa f\u00FCgg\u00F6leges tengely k\u00F6r\u00FCl
+PictInspec.icon=ikon
+PictInspec.noPicSel=Nincs k\u00E9p kiv\u00E1lasztva
+PictInspec.onServer=A szerveren
+PictInspec.rotLtTip=Kijel\u00F6lt kep(ek) forgat\u00E1sa 90\u00B0-al balra
+PictInspec.rotRtTip=Kijel\u00F6lt kep(ek) forgat\u00E1sa 90\u00B0-al jobbra
+PictInspec.upBtn=F\u00F6l
+PictInspec.upBtnTip=Kijel\u00F6lt k\u00E9p f\u00F6lfele mozgat\u00E1sa
+PrefsDlog.revert=Vissza\u00E1ll\u00EDt\u00E1s
+PrefsDlog.revertTip=<html>Panelon v\u00E9grehajtott v\u00E1ltoztat\u00E1sok visszavon\u00E1sa.<br>Ha ez gomb nem haszn\u00E1lhat\u00F3, akkor a valtoztat\u00E1sok nem visszavonhat\u00F3ak.</html>
+PrefsDlog.title=Gallery Remote be\u00E1ll\u00EDt\u00E1sok
+PreviewFrame.inModify=Lev\u00E1g\u00E1s mozgat\u00E1sa/m\u00E9retez\u00E9se...
+PreviewFrame.title=El\u00F6n\u00E9zet/Lev\u00E1g\u00E1s
+ProxyPa.icon=Proxi be\u00E1ll\u00EDt\u00E1sok
+ProxyPa.passwd=Jelsz\u00F3
+ProxyPa.proxyPort=Proxi port
+ProxyPa.proxyURL=Proxi c\u00EDm
+ProxyPa.useProxy=Proxi haszn\u00E1lat
+ProxyPa.username=Felhaszn\u00E1l\u00F3 n\u00E9v
+SlideFrame.controller.left=Balra ny\u00EDl
+SlideFrame.controller.mousewheel=Eg\u00E9r ker\u00E9k
+SlideFrame.controller.right=Jobbra ny\u00EDl
+SlideFrame.controller.space=Sz\u00F3k\u00F6zbillenty\u0171
+SlideFrame.downloading=Let\u00F6lt\u00E9s folyamatban {0} ({1, number, integer} / {2, number, integer})
+SlideFrame.nextReady=L\u00E1that\u00F3\: {0} ({1, number, integer} / {2, number, integer}), k\u00E9sz van a k\u00F6vetkez\u00F6
+SlideFrame.paused=L\u00E1that\u00F3\: {0} ({1, number, integer} / {2, number, integer}) (sz\u00FCnet)
+SlideFrame.processing=El\u00F6k\u00E9sz\u00EDt\u00E9s alatt\: picture {0} ({1, number, integer} / {2, number, integer})
+SlideFrame.showing=L\u00E1that\u00F3\: {0} ({1, number, integer} / {2, number, integer})
+SlideFrame.skipping=Ugr\u00E1s {0} ({1, number, integer} / {2, number, integer})
+SlidePa.appearanceTitle=K\u00FClalak
+SlidePa.backgroundColor=H\u00E1tt\u00E9rsz\u00EDn f\u00F6l\u00FCl\u00EDr\u00E1sa
+SlidePa.caption=K\u00E9pal\u00E1\u00EDr\u00E1s
+SlidePa.captionHelp=K\u00E9pal\u00E1\u00EDr\u00E1s elhelyez\u00E9se
+SlidePa.delay=Lass\u00EDt\u00E1s
+SlidePa.delayDesc=Diavet\u00EDt\u00E1s k\u00F6zben 'h' behozza a s\u00FAg\u00F3t.
+SlidePa.extra=Egy\u00E9b
+SlidePa.icon=Diavet\u00EDt\u00E9s/El\u00F6n\u00E9zet
+SlidePa.locationItem.0=Elrejt
+SlidePa.locationItem.10=Font k\u00F6z\u00E9pen
+SlidePa.locationItem.12=Font balra
+SlidePa.locationItem.14=Font jobbra
+SlidePa.locationItem.20=K\u00F6z\u00E9pen
+SlidePa.locationItem.22=K\u00F6z\u00E9pen balra
+SlidePa.locationItem.24=Kozepen jobbra
+SlidePa.locationItem.30=Alul k\u00F6z\u00E9pen
+SlidePa.locationItem.32=Alul balra
+SlidePa.locationItem.34=Alul jobbra
+SlidePa.locationTitle=Sz\u00F6vegek elhelyez\u00E9se
+SlidePa.loop=V\u00E9gtelen\u00EDtett diavet\u00EDt\u00E9s
+SlidePa.lowRez=K\u00E9pek let\u00F6lt\u00E9se kisebb felbont\u00E1sban
+SlidePa.noStretch=Ne h\u00FAzzon sz\u00E9t kisebb k\u00E9peket
+SlidePa.preloadAll=K\u00E9pek el\u00F6zetes bet\u00F6lt\u00E9se
+SlidePa.progress=Folyamat
+SlidePa.progressHelp=Folyamat jelz\u00F6 elhelyez\u00E9se
+SlidePa.progressionTitle=Diavet\u00EDtes
+SlidePa.random=V\u00E9letlen sorrend
+SlidePa.url=C\u00EDm
+StatusBar.Error=Hiba
+ThumbCache.loadThmb=Ikonok bet\u00F6lt\u00E9se...
+ThumbCache.thmbLoaded=Ikonok bet\u00F6ltve
+URLPa.delConfirm=Biztos vagy a {0} bejelentkez\u00E9si adatainak t\u00F6rl\u00E9s\u00E9ben?
+URLPa.delete=T\u00F6rl\u00E9s...
+URLPa.details=R\u00E9szletek
+URLPa.gllryURL=Gal\u00E9ria C\u00EDme\:
+URLPa.icon=C\u00EDmek
+URLPa.modify=V\u00E1ltoztat\u00E1s...
+URLPa.new=\u00DAj...
+URLPa.username=Felhaszn\u00E1l\u00F3 n\u00E9v\:
+Update.dnURL=Cim
+Update.newVerAvail=Van \u00FAjabb verzi\u00F3ja Gallery Remote-nak.
+Update.openInBrwsr=Nyit\u00E1s b\u00F6ng\u00E9sz\u00F6ben
+Update.relDate=Kibocs\u00E1jt\u00E1s ideje
+Update.relNotes=Megjegyz\u00E9sek
+Update.restart.text=Gallery Remote friss\u00EDtve lett. A program ki fog l\u00E9pni; ind\u00EDtsd \u00FAjra.
+Update.restart.title=Gallery Remote Friss\u00EDtve
+Update.title=Gallery Remote \u00DAj Verzi\u00F3
+Update.ver=Verzi\u00F3
+UploadPa.autoRot=EXIF kiolvas\u00E1sa a JPEG f\u00E1jlokb\u00F3l a k\u00E9pek automatikus forgat\u00E1s\u00E1hoz.
+UploadPa.capt=K\u00E9pal\u00E1\u00EDr\u00E1s legyen ugyanaz mint a f\u00E1jl neve
+UploadPa.captMetadata=K\u00E9pal\u00E1\u00EDr\u00E1s legyen ugyan az mint a metadata
+UploadPa.captNone=Nem kell el\u00F6rebe\u00E1ll\u00EDtott k\u00E9pal\u00E1\u00EDr\u00E1s
+UploadPa.captTip=Felt\u00F6lt\u00E9skor legyen a k\u00E9pal\u00E1\u00EDr\u00E1s ugyanaz mint a f\u00E1jl neve.  (ez k\u00E9s\u00F6bb megv\u00E1ltoztathat\u00F3)
+UploadPa.captions=K\u00E9pal\u00E1\u00EDr\u00E1sok
+UploadPa.escCapt=HTML markup engedelyezese a kepalairasban es egyeb mezokben
+UploadPa.icon=F\u00F6lt\u00F6lt\u00E9s
+UploadPa.res2Def=Album alapbe\u00E1ll\u00EDt\u00E1s
+UploadPa.res2Frc=Mindenk\u00E9pp \u00FAjram\u00E9retez
+UploadPa.res2H=Magass\u00E1g \u00FAjra m\u00E9retez\u00E9s
+UploadPa.res2W=Sz\u00E9less\u00E9g \u00FAjra m\u00E9retez\u00E9s
+UploadPa.resBfrUpld=F\u00F6lt\u00F6lt\u00E9s el\u00F6tti \u00FAjra m\u00E9retez\u00E9s
+UploadPa.res_rot=M\u00E9retez\u00E9s/Forgat\u00E1s
+UploadPa.stripExt=F\u00E1jl kiterjeszt\u00E9s elhagy\u00E1sa
+UploadPa.stripExtTip=Fjl kiterjeszt\u00E9s (.gif, .jpeg, etc.) elhagy\u00E1sa a k\u00E9pal\u00E1\u00EDr\u00E1sokn\u00E1l.
+UploadProgress.Cancel=M\u00E9gsem
+UploadProgress.Error=Hiba
+UploadProgress.Errors=Hib\u00E1k
+UploadProgress.shutDown=A g\u00E9p kikapcsol\u00E1sa miat\u00E1n k\u00E9sz
+UploadProgress.shutDownTip=A sz\u00E1mit\u00F3g\u00E9p kikapcsol\u00E1sa miut\u00E1n a felt\u00F6lt\u00E9sek befejez\u00F6dtek
